k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: series-tracker
  labels:
    app: frontend
    app.kubernetes.io/name: series-tracker
    app.kubernetes.io/component: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
        app.kubernetes.io/name: series-tracker
        app.kubernetes.io/component: frontend
    spec:
      containers:
        - name: frontend
          image: sara583/series-tracker-frontend:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 5173
