k8s/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: series-tracker
  labels:
    app: mongo
    app.kubernetes.io/name: series-tracker
    app.kubernetes.io/component: mongo
spec:
  type: ClusterIP
  selector:
    app: mongo
  ports:
    - name: mongo
      port: 27017
      targetPort: mongo
